Fix: google play badge does not load on Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,9 @@ main .badges {
 
 main .badge {
   display: flex;
+}
+
+main .badge img {
   height: 3rem;
 }
 
